bucams-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bucams-ingress
  labels:
    name: bucams-ingress
  annotations:
  # 어떤 발급자를 통해 인증서를 발급 받을지 결정한다.
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer 
spec:
  ingressClassName: nginx
  # 인증서를 적용할 도메인을 설정한다
  tls:
  - secretName: bucams-tls-secret
    hosts: 
    - beyond.bucams-api.com
    - beyond.bucams-app.com
  rules:
  # 호스트 기반의 라우팅 (Host-Based Routing)
  # 하나의 인그레스에서 여러 도메인 이름에 대해 서로 다른 서비스로 트래픽을 라우팅한다.
  - host: beyond.bucams-api.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bucams-api-service
            port: 
              number: 8080
  - host: beyond.bucams-app.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: bucams-vue-service
            port: 
              number: 80
